done: Refactor clickable menu to open using KnockoutJS, Define isOpen KO observable, Define toggle() and close() functions to change KO observable, Modify header text as well as menu text to use Google Font of Permanent Marker, alter center coordinates for Google Map to align more correctly over markers

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 html, body, #app{
   height: 100%;
   width: 100%;
-  background-color: #bfbfbf;
+  background-color: #FFFAFA;
+  margin: 0;
 }
 
 @media (max-width: 750px) {
@@ -67,7 +68,11 @@ nav.open {
 #menu{
   width: 40px;
   height: 10px;
-
+  margin-top: 30px;
+  margin-left: 15px;
+  float: left;
+  /* width: 100%; */
+  /* text-align: right; */
 }
 
 #menu_icon {
@@ -75,25 +80,35 @@ nav.open {
     height: 5px;
     background-color: black;
     margin: 6px 0;
+    border-radius: 50px;
+}
+
+.open {
+  /* height: 20rem; */
+  background-color: green;
 }
 
 #header{
-  width: 100%;
+  /* width: 100%; */
   font-size: 15px;
+
 }
 
 
 #title {
-  width: 100%;
-  text-align: center;
+  /* width: 100%; */
+  text-align: left;
+  margin-top: 5px;
+  padding-left: 20px;
+  float: left;
 }
 
-#menu {
-  padding-top: 20px;
-  float: right;
-  width: 100%;
-  text-align: right;
+.title-text {
+  font-family: 'Permanent Marker', cursive;
 }
+
+
+
 
 #map-container {
   float:right;
@@ -101,6 +116,13 @@ nav.open {
   width: 100%;
   height: 100%;
   /*border: blue solid;*/
+}
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
 }
 
 #map {
@@ -116,6 +138,7 @@ nav.open {
   z-index: 2;
   position: absolute;
   left: 10px;
+  margin-top: 100px;
   border-radius: 20px;
   border: #828282 solid;
   background-color: rgba(145, 145, 145, 0.86);
@@ -154,6 +177,7 @@ nav.open {
     /*margin-right: 100px;*/
     width: 165px;
     height: 150px;
+    margin-top: 100px;
     z-index: 3;
     display: block;
     position: absolute;
@@ -164,7 +188,9 @@ nav.open {
     overflow: hidden;
     text-align: center;
     font-family: "Mono";
-    background-color: #1E90FF;
+    background-color: rgba(145, 145, 145, 0.86);
+    /* background-color: #1E90FF; */
+    /* opacity: .5; */
 }
 
 #icon {
@@ -178,7 +204,6 @@ nav.open {
   font-size: 18px;
   text-align: center;
   text-transform: capitalize;
-
 }
 
 #temp_display{
